--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.5.1
   sqflite: ^2.4.1
   workmanager: ^0.5.2
+  provider: ^6.1.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
