--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
-
+  http: ^1.3.0
   intl: ^0.18.0
   path: ^1.9.0
+  provider: ^6.1.0
   shared_preferences: ^2.5.1
   sqflite: ^2.4.1
   workmanager: ^0.5.2
-  provider: ^6.1.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
