--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  android_alarm_manager_plus: ^4.0.7
+  audioplayers: ^6.2.0
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
@@ -38,8 +40,6 @@ dependencies:
   provider: ^6.1.0
   shared_preferences: ^2.5.1
   sqflite: ^2.4.1
-  android_alarm_manager_plus: ^4.0.7
-  
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -54,6 +54,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/audio/time_up_samsung.mp3  # Add this line# Add this line
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
