--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
+  flutter_local_notifications: ^18.0.1
+  fluttertoast: ^8.2.12
   http: ^1.3.0
   intl: ^0.18.0
   path: ^1.9.0
+  permission_handler: ^11.4.0
   provider: ^6.1.0
   shared_preferences: ^2.5.1
   sqflite: ^2.4.1
@@ -55,7 +58,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/audio/time_up_samsung.mp3  # Add this line# Add this line
+    - assets/audio/time_up_samsung.mp3 # Add this line# Add this line
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
