--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
+  flutter_foreground_task: ^8.17.0
   flutter_local_notifications: ^18.0.1
   fluttertoast: ^8.2.12
   http: ^1.3.0
