--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   android_alarm_manager_plus: ^4.0.7
   audioplayers: ^6.2.0
+  cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
@@ -37,7 +38,7 @@ dependencies:
   flutter_foreground_task: ^8.17.0
   flutter_local_notifications: ^18.0.1
   fluttertoast: ^8.2.12
-  http: ^1.3.0
+  http: ^1.4.0
   intl: ^0.18.0
   path: ^1.9.0
   permission_handler: ^11.4.0
