--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/audio/time_up_samsung.mp3 # Add this line
+    - assets/audio/time_up_samsung.mp3
+    - assets/audio/BoxingBell.mp3
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
