--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   assets:
     - assets/audio/time_up_samsung.mp3
     - assets/audio/BoxingBell.mp3
+    - assets/audio/11L-Subtle_mobile_Chime_-1748795262788.mp3
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
