--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   audioplayers: ^6.2.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
+  fl_chart: ^0.69.0
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
