--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   provider: ^6.1.0
   shared_preferences: ^2.5.1
   sqflite: ^2.4.1
+  vibration: ^2.0.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
