--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   audioplayers: ^6.2.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
+  file_picker: ^8.1.6
   fl_chart: ^0.69.0
   flutter:
     sdk: flutter
@@ -42,8 +43,10 @@ dependencies:
   http: ^1.4.0
   intl: ^0.18.0
   path: ^1.9.0
+  path_provider: ^2.1.5
   permission_handler: ^11.4.0
   provider: ^6.1.0
+  share_plus: ^10.1.2
   shared_preferences: ^2.5.1
   sqflite: ^2.4.1
   vibration: ^2.0.1
