--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,11 @@ flutter:
     - assets/audio/11L-Subtle_mobile_Chime_-1748795262788.mp3
     - assets/audio/fanfare chime.mp3
     - assets/meditation_sentences/sentences.json
+    - assets/audio/ambient/campfire_ambient.mp3
+    - assets/audio/ambient/drone_ambient.mp3
+    - assets/audio/ambient/rain_ambient.mp3
+    - assets/audio/ambient/forest_ambient.mp3
+    - assets/audio/ambient/waves_ambient.mp3
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
