--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,8 +39,8 @@ signingConfigs {
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        versionCode = 6
+        versionName = "1.0.0"
     }
 
     buildTypes {
@@ -48,8 +48,8 @@ signingConfigs {
 
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.release
-                    minifyEnabled false
-        shrinkResources false
+             minifyEnabled true
+            shrinkResources true
         }
     }
 }
